--- a/osd-brandings/opensearch_dashboards.yml
+++ b/osd-brandings/opensearch_dashboards.yml
@@ -1,15 +1,15 @@
 opensearchDashboards.branding:
   logo:
-    defaultUrl: "https://raw.githubusercontent.com/anubhavg-icpl/invinsense-branding/master/Invinsense-logo_white.svg"
-    darkModeUrl: "https://raw.githubusercontent.com/anubhavg-icpl/invinsense-branding/master/Invinsense-logo.svg"
+    defaultUrl: "https://raw.githubusercontent.com/anubhavg-icpl/openarmor-branding/master/openarmor-logo_white.svg"
+    darkModeUrl: "https://raw.githubusercontent.com/anubhavg-icpl/openarmor-branding/master/openarmor-logo.svg"
   mark:
-    defaultUrl: "https://raw.githubusercontent.com/anubhavg-icpl/invinsense-branding/master/icon.svg"
-    darkModeUrl: "https://raw.githubusercontent.com/anubhavg-icpl/invinsense-branding/master/icon.svg"
+    defaultUrl: "https://raw.githubusercontent.com/anubhavg-icpl/openarmor-branding/master/icon.svg"
+    darkModeUrl: "https://raw.githubusercontent.com/anubhavg-icpl/openarmor-branding/master/icon.svg"
   loadingLogo:
-    defaultUrl: "https://raw.githubusercontent.com/anubhavg-icpl/invinsense-branding/master/icon.svg"
-    darkModeUrl: "https://raw.githubusercontent.com/anubhavg-icpl/invinsense-branding/master/icon.svg"
-  faviconUrl: "https://raw.githubusercontent.com/Infopercept/invinsense-brandings/main/favicon.ico"
-  applicationTitle: "INVINSENSE"
+    defaultUrl: "https://raw.githubusercontent.com/anubhavg-icpl/openarmor-branding/master/icon.svg"
+    darkModeUrl: "https://raw.githubusercontent.com/anubhavg-icpl/openarmor-branding/master/icon.svg"
+  faviconUrl: "https://raw.githubusercontent.com/openarmor/openarmor-brandings/main/favicon.ico"
+  applicationTitle: "OpenArmor"
   useExpandedHeader: true
 
 
